spade-tests/src/snapshots/spade_tests__parser__square_wave_readme_example.snap
---
source: spade-tests/src/parser.rs
---
entity square_wave(clk: clock, rst: bool) -> bool {
    reg(clk) value reset (rst: false) = !value;
    value
}



