spade-tests/src/snapshots/spade_tests__parser__stage_ready_or_valid.snap
---
source: spade-tests/src/parser.rs
---
pipeline(0) top() -> bool{
    stage.ident
}


error: Expected `ready` or `valid`, got `ident`
  ┌─ testinput:2:11
  │
2 │     stage.ident
  │           ^^^^^ Expected `ready` or `valid`
