spade-tests/src/snapshots/spade_tests__parser__tuple_index_no_integer.snap
---
source: spade-tests/src/parser.rs
---
fn a(y: int<1>) -> int<32> {
    let t = (3, 5);
    t#y
}

error: expected an index after #
  ┌─ testinput:3:7
  │
3 │     t#y
  │       ^ expected index here
