spade-tests/src/snapshots/spade_tests__parser__tuple_index_out_of_bounds_error.snap
---
source: spade-tests/src/parser.rs
---
fn a(b: int<2>, c: int<2> ) -> int<3> {
    let tup = (b, c);
    tup#2
}

error: Tuple index out of bounds
  ┌─ testinput:3:8
  │
3 │     tup#2
  │        ^^ Tuple only has 2 elements
  │
  = note:      Index: 2
  = note: Tuple size: 2


